feat: 🎸 新增 user 功能、測試 swagger
