# schema/userSchema.js
@@ -1,0 +1,13 @@
+const userSchema = {
+  createUser: {
+    $nickname: "美女",
+    $email: "abc@gmail.com",
+    $sex: 2,
+    image: "",
+    $password: "",
+    followers: [],
+    like_posts: [],
+  },
+};
+
+module.exports = userSchema;
